feat: Introduce new UI components and their styles, update core pages, and remove legacy JavaScript files.

--- a/components.html
+++ b/components.html
@@ -101,7 +101,7 @@
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="#" class="component-card">
+            <a href="components/checkbox.html" class="component-card">
               <div class="card-icon">
                 <i class="fas fa-check-square"></i>
               </div>
@@ -110,7 +110,7 @@
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="#" class="component-card">
+            <a href="components/radio.html" class="component-card">
               <div class="card-icon">
                 <i class="fas fa-dot-circle"></i>
               </div>
@@ -119,7 +119,7 @@
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="#" class="component-card">
+            <a href="components/switch.html" class="component-card">
               <div class="card-icon">
                 <i class="fas fa-toggle-on"></i>
               </div>
@@ -128,7 +128,7 @@
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="#" class="component-card">
+            <a href="components/select.html" class="component-card">
               <div class="card-icon">
                 <i class="fas fa-caret-down"></i>
               </div>
@@ -145,57 +145,57 @@
             Layout
           </h2>
           <div class="components-grid">
-            <a href="#" class="component-card">
+            <a href="components/grid.html" class="component-card">
               <div class="card-icon">
                 <i class="fas fa-columns"></i>
               </div>
               <h3>Grid</h3>
-              <p>Flexible grid system for responsive layouts.</p>
+              <p>5 responsive grid layouts.</p>
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="#" class="component-card">
+            <a href="components/container.html" class="component-card">
               <div class="card-icon">
                 <i class="fas fa-box"></i>
               </div>
               <h3>Container</h3>
-              <p>Centered containers with max-width constraints.</p>
+              <p>4 container styles for layouts.</p>
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="#" class="component-card">
+            <a href="components/card.html" class="component-card">
               <div class="card-icon">
                 <i class="fas fa-id-card"></i>
               </div>
               <h3>Card</h3>
-              <p>Content cards with headers, bodies, and footers.</p>
+              <p>6 card styles for content display.</p>
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="#" class="component-card">
+            <a href="components/divider.html" class="component-card">
               <div class="card-icon">
                 <i class="fas fa-grip-lines"></i>
               </div>
               <h3>Divider</h3>
-              <p>Horizontal and vertical dividers.</p>
+              <p>6 divider styles for sections.</p>
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="#" class="component-card">
+            <a href="components/spacer.html" class="component-card">
               <div class="card-icon">
                 <i class="fas fa-expand-alt"></i>
               </div>
               <h3>Spacer</h3>
-              <p>Flexible spacing utilities.</p>
+              <p>Spacing utilities for layouts.</p>
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="#" class="component-card">
+            <a href="components/stack.html" class="component-card">
               <div class="card-icon">
                 <i class="fas fa-layer-group"></i>
               </div>
               <h3>Stack</h3>
-              <p>Vertical and horizontal stacking components.</p>
+              <p>5 stack layouts for arrangement.</p>
               <span class="card-arrow">→</span>
             </a>
           </div>
