--- a/docs.html
+++ b/docs.html
@@ -91,6 +91,19 @@
               <ul>
                 <li><a href="#buttons">Buttons</a></li>
                 <li><a href="#forms">Forms</a></li>
+                <li><a href="#checkbox">Checkbox</a></li>
+                <li><a href="#radio">Radio</a></li>
+                <li><a href="#switch">Switch</a></li>
+                <li><a href="#select">Select</a></li>
+              </ul>
+              <h4>Layout</h4>
+              <ul>
+                <li><a href="#grid">Grid</a></li>
+                <li><a href="#container">Container</a></li>
+                <li><a href="#card">Card</a></li>
+                <li><a href="#divider">Divider</a></li>
+                <li><a href="#spacer">Spacer</a></li>
+                <li><a href="#stack">Stack</a></li>
               </ul>
             </nav>
           </aside>
@@ -113,7 +126,13 @@
 &lt;link rel="stylesheet" href="https://cdn.kvolib.dev/css/buttons.css"&gt;
 
 &lt;!-- Forms CSS --&gt;
-&lt;link rel="stylesheet" href="https://cdn.kvolib.dev/css/forms.css"&gt;</code></pre>
+&lt;link rel="stylesheet" href="https://cdn.kvolib.dev/css/forms.css"&gt;
+
+&lt;!-- Input Components CSS --&gt;
+&lt;link rel="stylesheet" href="https://cdn.kvolib.dev/css/checkbox.css"&gt;
+&lt;link rel="stylesheet" href="https://cdn.kvolib.dev/css/radio.css"&gt;
+&lt;link rel="stylesheet" href="https://cdn.kvolib.dev/css/switch.css"&gt;
+&lt;link rel="stylesheet" href="https://cdn.kvolib.dev/css/select.css"&gt;</code></pre>
                 </div>
               </div>
 
@@ -327,6 +346,461 @@
                     />
                   </div>
                 </div>
+              </div>
+            </section>
+
+            <section id="checkbox" class="docs-section">
+              <h2>Checkbox</h2>
+              <p>
+                8 modern checkbox styles with custom animations.
+                <a href="components/checkbox.html" style="color: #00d4ff"
+                  >View all →</a
+                >
+              </p>
+
+              <div class="props-table">
+                <table>
+                  <thead>
+                    <tr>
+                      <th>Style</th>
+                      <th>Description</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td><code>Modern</code></td>
+                      <td>Smooth scale animation</td>
+                    </tr>
+                    <tr>
+                      <td><code>Minimal</code></td>
+                      <td>Clean & simple design</td>
+                    </tr>
+                    <tr>
+                      <td><code>Gradient</code></td>
+                      <td>Beautiful gradient fill</td>
+                    </tr>
+                    <tr>
+                      <td><code>Neon</code></td>
+                      <td>Glowing neon effect</td>
+                    </tr>
+                    <tr>
+                      <td><code>Bouncy</code></td>
+                      <td>Fun bouncy animation</td>
+                    </tr>
+                    <tr>
+                      <td><code>Toggle Style</code></td>
+                      <td>Toggle switch appearance</td>
+                    </tr>
+                    <tr>
+                      <td><code>Glow</code></td>
+                      <td>Purple glowing effect</td>
+                    </tr>
+                    <tr>
+                      <td><code>3D Effect</code></td>
+                      <td>Neumorphic 3D style</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </section>
+
+            <section id="radio" class="docs-section">
+              <h2>Radio</h2>
+              <p>
+                5 radio button styles for single selection.
+                <a href="components/radio.html" style="color: #00d4ff"
+                  >View all →</a
+                >
+              </p>
+
+              <div class="props-table">
+                <table>
+                  <thead>
+                    <tr>
+                      <th>Style</th>
+                      <th>Description</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td><code>Modern</code></td>
+                      <td>Clean with smooth animation</td>
+                    </tr>
+                    <tr>
+                      <td><code>Minimal</code></td>
+                      <td>Simple and minimal</td>
+                    </tr>
+                    <tr>
+                      <td><code>Neon</code></td>
+                      <td>Glowing neon with scale</td>
+                    </tr>
+                    <tr>
+                      <td><code>Gradient</code></td>
+                      <td>Pink gradient fill</td>
+                    </tr>
+                    <tr>
+                      <td><code>Ripple</code></td>
+                      <td>Ripple effect animation</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </section>
+
+            <section id="switch" class="docs-section">
+              <h2>Switch</h2>
+              <p>
+                6 toggle switch styles for settings.
+                <a href="components/switch.html" style="color: #00d4ff"
+                  >View all →</a
+                >
+              </p>
+
+              <div class="props-table">
+                <table>
+                  <thead>
+                    <tr>
+                      <th>Style</th>
+                      <th>Description</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td><code>iOS Style</code></td>
+                      <td>Classic iOS-inspired toggle</td>
+                    </tr>
+                    <tr>
+                      <td><code>Material</code></td>
+                      <td>Material design toggle</td>
+                    </tr>
+                    <tr>
+                      <td><code>Neon</code></td>
+                      <td>Glowing neon toggle</td>
+                    </tr>
+                    <tr>
+                      <td><code>Gradient</code></td>
+                      <td>Purple gradient colors</td>
+                    </tr>
+                    <tr>
+                      <td><code>Minimal</code></td>
+                      <td>Clean minimal design</td>
+                    </tr>
+                    <tr>
+                      <td><code>Square</code></td>
+                      <td>Square-shaped toggle</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </section>
+
+            <section id="select" class="docs-section">
+              <h2>Select</h2>
+              <p>
+                5 dropdown styles with modern effects.
+                <a href="components/select.html" style="color: #00d4ff"
+                  >View all →</a
+                >
+              </p>
+
+              <div class="props-table">
+                <table>
+                  <thead>
+                    <tr>
+                      <th>Style</th>
+                      <th>Description</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td><code>Modern</code></td>
+                      <td>Clean modern dropdown</td>
+                    </tr>
+                    <tr>
+                      <td><code>Minimal</code></td>
+                      <td>Underline style</td>
+                    </tr>
+                    <tr>
+                      <td><code>Glassmorphism</code></td>
+                      <td>Glass blur effect</td>
+                    </tr>
+                    <tr>
+                      <td><code>Neon</code></td>
+                      <td>Glowing cyan effect</td>
+                    </tr>
+                    <tr>
+                      <td><code>Gradient Border</code></td>
+                      <td>Animated gradient border</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </section>
+
+            <section id="grid" class="docs-section">
+              <h2>Grid</h2>
+              <p>
+                5 responsive grid layouts.
+                <a href="components/grid.html" style="color: #00d4ff"
+                  >View all →</a
+                >
+              </p>
+              <div class="props-table">
+                <table>
+                  <thead>
+                    <tr>
+                      <th>Layout</th>
+                      <th>Description</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td><code>Two Column</code></td>
+                      <td>Responsive 2-column grid</td>
+                    </tr>
+                    <tr>
+                      <td><code>Three Column</code></td>
+                      <td>Responsive 3-column grid</td>
+                    </tr>
+                    <tr>
+                      <td><code>Four Column</code></td>
+                      <td>Responsive 4-column grid</td>
+                    </tr>
+                    <tr>
+                      <td><code>Auto Fit</code></td>
+                      <td>Automatically fits items</td>
+                    </tr>
+                    <tr>
+                      <td><code>Masonry</code></td>
+                      <td>Pinterest-style layout</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </section>
+
+            <section id="container" class="docs-section">
+              <h2>Container</h2>
+              <p>
+                4 container styles for layouts.
+                <a href="components/container.html" style="color: #00d4ff"
+                  >View all →</a
+                >
+              </p>
+              <div class="props-table">
+                <table>
+                  <thead>
+                    <tr>
+                      <th>Variant</th>
+                      <th>Max Width</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td><code>Centered</code></td>
+                      <td>1200px</td>
+                    </tr>
+                    <tr>
+                      <td><code>Fluid</code></td>
+                      <td>100%</td>
+                    </tr>
+                    <tr>
+                      <td><code>Narrow</code></td>
+                      <td>768px</td>
+                    </tr>
+                    <tr>
+                      <td><code>Wide</code></td>
+                      <td>1400px</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </section>
+
+            <section id="card" class="docs-section">
+              <h2>Card</h2>
+              <p>
+                6 card styles for content display.
+                <a href="components/card.html" style="color: #00d4ff"
+                  >View all →</a
+                >
+              </p>
+              <div class="props-table">
+                <table>
+                  <thead>
+                    <tr>
+                      <th>Style</th>
+                      <th>Description</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td><code>Basic</code></td>
+                      <td>Simple with subtle hover</td>
+                    </tr>
+                    <tr>
+                      <td><code>Glass</code></td>
+                      <td>Glassmorphism effect</td>
+                    </tr>
+                    <tr>
+                      <td><code>Gradient</code></td>
+                      <td>Gradient background</td>
+                    </tr>
+                    <tr>
+                      <td><code>Neon</code></td>
+                      <td>Glowing neon effect</td>
+                    </tr>
+                    <tr>
+                      <td><code>3D</code></td>
+                      <td>Neumorphic style</td>
+                    </tr>
+                    <tr>
+                      <td><code>Hoverable</code></td>
+                      <td>Smooth lift animation</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </section>
+
+            <section id="divider" class="docs-section">
+              <h2>Divider</h2>
+              <p>
+                6 divider styles for sections.
+                <a href="components/divider.html" style="color: #00d4ff"
+                  >View all →</a
+                >
+              </p>
+              <div class="props-table">
+                <table>
+                  <thead>
+                    <tr>
+                      <th>Style</th>
+                      <th>Description</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td><code>Solid</code></td>
+                      <td>Simple solid line</td>
+                    </tr>
+                    <tr>
+                      <td><code>Dashed</code></td>
+                      <td>Dashed border style</td>
+                    </tr>
+                    <tr>
+                      <td><code>Gradient</code></td>
+                      <td>Gradient effect</td>
+                    </tr>
+                    <tr>
+                      <td><code>Glow</code></td>
+                      <td>Neon glow effect</td>
+                    </tr>
+                    <tr>
+                      <td><code>With Text</code></td>
+                      <td>Centered text label</td>
+                    </tr>
+                    <tr>
+                      <td><code>Vertical</code></td>
+                      <td>For inline content</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </section>
+
+            <section id="spacer" class="docs-section">
+              <h2>Spacer</h2>
+              <p>
+                Spacing utilities for layouts.
+                <a href="components/spacer.html" style="color: #00d4ff"
+                  >View all →</a
+                >
+              </p>
+              <div class="props-table">
+                <table>
+                  <thead>
+                    <tr>
+                      <th>Size</th>
+                      <th>Vertical</th>
+                      <th>Horizontal</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td><code>xs</code></td>
+                      <td>8px</td>
+                      <td>8px</td>
+                    </tr>
+                    <tr>
+                      <td><code>sm</code></td>
+                      <td>16px</td>
+                      <td>16px</td>
+                    </tr>
+                    <tr>
+                      <td><code>md</code></td>
+                      <td>24px</td>
+                      <td>24px</td>
+                    </tr>
+                    <tr>
+                      <td><code>lg</code></td>
+                      <td>32px</td>
+                      <td>32px</td>
+                    </tr>
+                    <tr>
+                      <td><code>xl</code></td>
+                      <td>48px</td>
+                      <td>48px</td>
+                    </tr>
+                    <tr>
+                      <td><code>2xl</code></td>
+                      <td>64px</td>
+                      <td>64px</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </section>
+
+            <section id="stack" class="docs-section">
+              <h2>Stack</h2>
+              <p>
+                5 stack layouts for arrangement.
+                <a href="components/stack.html" style="color: #00d4ff"
+                  >View all →</a
+                >
+              </p>
+              <div class="props-table">
+                <table>
+                  <thead>
+                    <tr>
+                      <th>Layout</th>
+                      <th>Description</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td><code>Vertical</code></td>
+                      <td>Column direction</td>
+                    </tr>
+                    <tr>
+                      <td><code>Horizontal</code></td>
+                      <td>Row direction</td>
+                    </tr>
+                    <tr>
+                      <td><code>Vertical Centered</code></td>
+                      <td>Column with center align</td>
+                    </tr>
+                    <tr>
+                      <td><code>Horizontal Centered</code></td>
+                      <td>Row with center align</td>
+                    </tr>
+                    <tr>
+                      <td><code>Space Between</code></td>
+                      <td>Space-between layout</td>
+                    </tr>
+                  </tbody>
+                </table>
               </div>
             </section>
           </main>
