--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
     <section class="hero" id="hero">
       <div class="hero-content">
         <h1 class="hero-title">
-          <span class="typewriter-text">Beautiful UI Components</span>
+          <span class="typewriter-text">Web Components</span>
         </h1>
 
         <p class="hero-description">
-          KvoLib provides the best developer experience with flexible, beautiful
-          UI components for building modern web applications.
+          KvoLib is my personal collection of flexible and clean UI components
+          for building modern web interfaces.
         </p>
 
         <div class="hero-actions">
@@ -109,15 +109,15 @@
             <span class="stat-label">Components</span>
           </div>
           <div class="stat-card">
-            <span class="stat-value">100%</span>
-            <span class="stat-label">Free</span>
+            <span class="stat-value">Open</span>
+            <span class="stat-label">Source</span>
           </div>
           <div class="stat-card">
-            <span class="stat-value">Weekly</span>
-            <span class="stat-label">Updates</span>
+            <span class="stat-value">Actively</span>
+            <span class="stat-label">Maintained</span>
           </div>
           <div class="stat-card">
-            <span class="stat-value">&lt;10kb</span>
+            <span class="stat-value">Small</span>
             <span class="stat-label">Bundle Size</span>
           </div>
         </div>
@@ -136,25 +136,16 @@
         </div>
 
         <div class="components-grid">
-          <a href="#" class="component-card">
+          <a href="/components.html#inputs" class="component-card">
             <div class="card-icon">
               <i class="fas fa-hand-pointer"></i>
             </div>
-            <h3>Buttons</h3>
-            <p>Multiple variants, sizes, and states for every interaction.</p>
+            <h3>Inputs</h3>
+            <p>Buttons, forms, checkboxes, radios, switches, and selects.</p>
             <span class="card-arrow">→</span>
           </a>
 
-          <a href="#" class="component-card">
-            <div class="card-icon">
-              <i class="fas fa-keyboard"></i>
-            </div>
-            <h3>Forms</h3>
-            <p>Inputs, selects, checkboxes, and complete form layouts.</p>
-            <span class="card-arrow">→</span>
-          </a>
-
-          <a href="#" class="component-card">
+          <a href="/components.html#layout" class="component-card">
             <div class="card-icon">
               <i class="fas fa-th-large"></i>
             </div>
@@ -163,16 +154,7 @@
             <span class="card-arrow">→</span>
           </a>
 
-          <a href="#" class="component-card">
-            <div class="card-icon">
-              <i class="fas fa-table"></i>
-            </div>
-            <h3>Data Display</h3>
-            <p>Tables, lists, and data visualization components.</p>
-            <span class="card-arrow">→</span>
-          </a>
-
-          <a href="#" class="component-card">
+          <a href="/components.html#feedback" class="component-card">
             <div class="card-icon">
               <i class="fas fa-bell"></i>
             </div>
@@ -181,7 +163,7 @@
             <span class="card-arrow">→</span>
           </a>
 
-          <a href="#" class="component-card">
+          <a href="/components.html#navigation" class="component-card">
             <div class="card-icon">
               <i class="fas fa-compass"></i>
             </div>
@@ -196,8 +178,8 @@
     <section class="cta-section">
       <div class="container">
         <div class="cta-content">
-          <h2>Start building today</h2>
-          <p>Join thousands of developers building with KvoLib.</p>
+          <h2>Ready to explore?</h2>
+          <p>Check out the component library and start using KvoLib.</p>
           <div class="cta-actions">
             <a href="#" class="btn btn-white btn-xl">
               Get Started
