feat: Introduce new UI components including alert, modal, toast, progress, spinner, and skeleton, and integrate AOS for enhanced documentation.

--- a/docs.html
+++ b/docs.html
@@ -28,6 +28,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
 
     <link rel="icon" type="image/png" href="assets/img/icon.png" />
     <link rel="stylesheet" href="assets/css/styles.css" />
@@ -109,7 +110,7 @@
           </aside>
 
           <main class="docs-content">
-            <section id="installation" class="docs-section">
+            <section id="installation" class="docs-section" data-aos="fade-up">
               <h2>Installation</h2>
               <p>Get started by including KvoLib CSS in your project.</p>
 
@@ -150,7 +151,7 @@
               </div>
             </section>
 
-            <section id="usage" class="docs-section">
+            <section id="usage" class="docs-section" data-aos="fade-up">
               <h2>Usage</h2>
               <p>Include the CSS files and use the classes in your HTML.</p>
 
@@ -184,7 +185,7 @@
               </div>
             </section>
 
-            <section id="buttons" class="docs-section">
+            <section id="buttons" class="docs-section" data-aos="fade-up">
               <h2>Buttons</h2>
               <p>
                 20+ unique button styles with animations.
@@ -320,7 +321,7 @@
               </div>
             </section>
 
-            <section id="forms" class="docs-section">
+            <section id="forms" class="docs-section" data-aos="fade-up">
               <h2>Forms</h2>
               <p>
                 Available form input styles.
@@ -349,7 +350,7 @@
               </div>
             </section>
 
-            <section id="checkbox" class="docs-section">
+            <section id="checkbox" class="docs-section" data-aos="fade-up">
               <h2>Checkbox</h2>
               <p>
                 8 modern checkbox styles with custom animations.
@@ -404,7 +405,7 @@
               </div>
             </section>
 
-            <section id="radio" class="docs-section">
+            <section id="radio" class="docs-section" data-aos="fade-up">
               <h2>Radio</h2>
               <p>
                 5 radio button styles for single selection.
@@ -447,7 +448,7 @@
               </div>
             </section>
 
-            <section id="switch" class="docs-section">
+            <section id="switch" class="docs-section" data-aos="fade-up">
               <h2>Switch</h2>
               <p>
                 6 toggle switch styles for settings.
@@ -494,7 +495,7 @@
               </div>
             </section>
 
-            <section id="select" class="docs-section">
+            <section id="select" class="docs-section" data-aos="fade-up">
               <h2>Select</h2>
               <p>
                 5 dropdown styles with modern effects.
@@ -537,7 +538,7 @@
               </div>
             </section>
 
-            <section id="grid" class="docs-section">
+            <section id="grid" class="docs-section" data-aos="fade-up">
               <h2>Grid</h2>
               <p>
                 5 responsive grid layouts.
@@ -579,7 +580,7 @@
               </div>
             </section>
 
-            <section id="container" class="docs-section">
+            <section id="container" class="docs-section" data-aos="fade-up">
               <h2>Container</h2>
               <p>
                 4 container styles for layouts.
@@ -617,7 +618,7 @@
               </div>
             </section>
 
-            <section id="card" class="docs-section">
+            <section id="card" class="docs-section" data-aos="fade-up">
               <h2>Card</h2>
               <p>
                 6 card styles for content display.
@@ -663,7 +664,7 @@
               </div>
             </section>
 
-            <section id="divider" class="docs-section">
+            <section id="divider" class="docs-section" data-aos="fade-up">
               <h2>Divider</h2>
               <p>
                 6 divider styles for sections.
@@ -709,7 +710,7 @@
               </div>
             </section>
 
-            <section id="spacer" class="docs-section">
+            <section id="spacer" class="docs-section" data-aos="fade-up">
               <h2>Spacer</h2>
               <p>
                 Spacing utilities for layouts.
@@ -762,7 +763,7 @@
               </div>
             </section>
 
-            <section id="stack" class="docs-section">
+            <section id="stack" class="docs-section" data-aos="fade-up">
               <h2>Stack</h2>
               <p>
                 5 stack layouts for arrangement.
@@ -854,6 +855,7 @@
       </div>
     </footer>
 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
