--- a/components.html
+++ b/components.html
@@ -28,6 +28,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
 
     <link rel="icon" type="image/png" href="assets/img/icon.png" />
     <link rel="stylesheet" href="assets/css/styles.css" />
@@ -83,16 +84,26 @@
             Inputs
           </h2>
           <div class="components-grid">
-            <a href="components/buttons.html" class="component-card">
+            <a
+              href="components/buttons.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="0"
+            >
               <div class="card-icon">
                 <i class="fas fa-hand-pointer"></i>
               </div>
               <h3>Buttons</h3>
-              <p>Primary, secondary, outline, ghost, and icon buttons.</p>
+              <p>20+ unique button styles with animations.</p>
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="components/forms.html" class="component-card">
+            <a
+              href="components/forms.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="50"
+            >
               <div class="card-icon">
                 <i class="fas fa-keyboard"></i>
               </div>
@@ -101,7 +112,12 @@
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="components/checkbox.html" class="component-card">
+            <a
+              href="components/checkbox.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <div class="card-icon">
                 <i class="fas fa-check-square"></i>
               </div>
@@ -110,7 +126,12 @@
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="components/radio.html" class="component-card">
+            <a
+              href="components/radio.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="150"
+            >
               <div class="card-icon">
                 <i class="fas fa-dot-circle"></i>
               </div>
@@ -119,7 +140,12 @@
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="components/switch.html" class="component-card">
+            <a
+              href="components/switch.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="200"
+            >
               <div class="card-icon">
                 <i class="fas fa-toggle-on"></i>
               </div>
@@ -128,7 +154,12 @@
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="components/select.html" class="component-card">
+            <a
+              href="components/select.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="250"
+            >
               <div class="card-icon">
                 <i class="fas fa-caret-down"></i>
               </div>
@@ -145,7 +176,12 @@
             Layout
           </h2>
           <div class="components-grid">
-            <a href="components/grid.html" class="component-card">
+            <a
+              href="components/grid.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="0"
+            >
               <div class="card-icon">
                 <i class="fas fa-columns"></i>
               </div>
@@ -154,7 +190,12 @@
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="components/container.html" class="component-card">
+            <a
+              href="components/container.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="50"
+            >
               <div class="card-icon">
                 <i class="fas fa-box"></i>
               </div>
@@ -163,7 +204,12 @@
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="components/card.html" class="component-card">
+            <a
+              href="components/card.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <div class="card-icon">
                 <i class="fas fa-id-card"></i>
               </div>
@@ -172,7 +218,12 @@
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="components/divider.html" class="component-card">
+            <a
+              href="components/divider.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="150"
+            >
               <div class="card-icon">
                 <i class="fas fa-grip-lines"></i>
               </div>
@@ -181,7 +232,12 @@
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="components/spacer.html" class="component-card">
+            <a
+              href="components/spacer.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="200"
+            >
               <div class="card-icon">
                 <i class="fas fa-expand-alt"></i>
               </div>
@@ -190,7 +246,12 @@
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="components/stack.html" class="component-card">
+            <a
+              href="components/stack.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="250"
+            >
               <div class="card-icon">
                 <i class="fas fa-layer-group"></i>
               </div>
@@ -207,57 +268,87 @@
             Feedback
           </h2>
           <div class="components-grid">
-            <a href="#" class="component-card">
+            <a
+              href="components/alert.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="0"
+            >
               <div class="card-icon">
                 <i class="fas fa-exclamation-triangle"></i>
               </div>
               <h3>Alert</h3>
-              <p>Info, success, warning, and error alerts.</p>
+              <p>10 alert styles for notifications.</p>
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="#" class="component-card">
+            <a
+              href="components/toast.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="50"
+            >
               <div class="card-icon">
                 <i class="fas fa-sticky-note"></i>
               </div>
               <h3>Toast</h3>
-              <p>Non-blocking notification toasts.</p>
+              <p>8 toast styles for notifications.</p>
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="#" class="component-card">
+            <a
+              href="components/modal.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <div class="card-icon">
                 <i class="fas fa-window-maximize"></i>
               </div>
               <h3>Modal</h3>
-              <p>Dialog modals for user interactions.</p>
+              <p>6 modal styles for dialogs.</p>
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="#" class="component-card">
+            <a
+              href="components/spinner.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="150"
+            >
               <div class="card-icon">
                 <i class="fas fa-spinner"></i>
               </div>
               <h3>Spinner</h3>
-              <p>Loading spinners and progress indicators.</p>
+              <p>8 loading spinner styles.</p>
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="#" class="component-card">
+            <a
+              href="components/progress.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="200"
+            >
               <div class="card-icon">
                 <i class="fas fa-tasks"></i>
               </div>
               <h3>Progress</h3>
-              <p>Progress bars with labels and colors.</p>
+              <p>8 progress bar styles.</p>
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="#" class="component-card">
+            <a
+              href="components/skeleton.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="250"
+            >
               <div class="card-icon">
                 <i class="fas fa-bone"></i>
               </div>
               <h3>Skeleton</h3>
-              <p>Loading skeleton placeholders.</p>
+              <p>10 skeleton loading placeholders.</p>
               <span class="card-arrow">→</span>
             </a>
           </div>
@@ -329,6 +420,7 @@
 
     <div data-include="assets/layout/footer.html"></div>
 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
